# publicsuffix2

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: engine.rs  errors.rs  http.rs  lib.rs  options.rs  rules.rs
src/loader/: mod.rs
tests/: 00_errors.rs  parity_mozilla.rs  parity_ps2.rs  test_errors.rs  test_lib.rs  test_options.rs
tests/fixtures/: test_psl.txt
