[package]
name = "publicsuffix2"
description = "Extract root domain and suffix from a domain name"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/chancetudor/publicsuffix2"
documentation = "https://docs.rs/publicsuffix2"
readme = "README.md"
keywords = ["tld", "psl", "tldextract", "domain", "dns", "sld", "publicsuffix", "publicsuffix2"]
authors = ["ctudor <chance@cmtudor.com>"]
edition = "2024"


[features]
default = ["std", "idna"]
std = []
idna = ["dep:idna"]  # optional normalization
serde = ["dep:serde","dep:serde_json"]  # optional for fixtures/tests only

[dependencies]
hashbrown = "0.14"
idna = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"