[package]
name = "publicsuffix2"
description = "Extract root domain and suffix from a domain name"
version = "0.4.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chancetudor/publicsuffix2"
documentation = "https://docs.rs/publicsuffix2"
readme = "README.md"
keywords = ["publicsuffix", "domain", "tld", "psl", "tldextract"]
authors = ["ctudor <chance@cmtudor.com>"]
edition = "2021"

[features]
default = ["std", "idna"]
std = []
fetch = ["dep:ureq", "std"]
idna = ["dep:idna"]  # optional normalization
serde = ["dep:serde","dep:serde_json"]  # optional for fixtures/tests only

[dependencies]
hashbrown = "0.16"
idna = { version = "1.0.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
ureq = { version = "2.9.6", optional = true }
once_cell = "1.19"

[dev-dependencies]
criterion = "0.7"
mockito = "1.3.0"